css/browse.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.navigationbar{
    width: 250px;

}


.button {
    background-color: deepskyblue;
    border: none;
    padding: 15px 32px;
    text-align: left;
    text-decoration: none;

    font-size: 16px;
    cursor: pointer;
    color: floralwhite;
    font-family: "Arial Black";
    width: 250px;
    border: 1px solid white;
}

.button:hover{
    background-color: lightskyblue;
    border: none;
    padding: 15px 32px;
    text-align: left;
    text-decoration: none;
    display: inline-block;
    cursor: pointer;
    color: floralwhite;
    font-family: "Arial Black";
    width: 250px;
    border: 1px solid white;

}

.producten{
    float: left;
    width: 180px;
    margin: 20px auto;
    height : 45%;
    font-family: Arial;
    text-align: center;
}

.text3{
    font-family: Aharoni;
    font-size: 30px;
    color:black;
    margin-right: 500px;
}

.productfoto{
    width: 250px;
    height: 250px;
    float: left;
}

.test {
    float: right;
    display: flex;
    flex-direction: column;
    margin: -65px 30px 70px 30px;
    height: 350px;
}

.productnaam{
    width: 260px;
    align-content: center;
}

.test6{
    margin: 20px;
}

.paginatie{
    float: left;
    padding-right: 50px;
    margin-right: 40%;
}
.pagination{
    font-size: 20px;
}

